syntax = "proto3";

package authenticator;

import "error.proto";

option go_package = "./pb";

service Authenticator {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc NonceConfirm(NonceConfirmRequest) returns (NonceConfirmResponse);
}

message RegisterRequest { string Publickey = 1; }

message RegisterResponse {
  bool Success = 1;
  string HashedNonce = 2;
  ErrorCode ErrorCode = 3;
  string ErrorMessage = 4;
}

message NonceConfirmRequest {
  string Publickey = 1;
  string Nonce = 2;
}

message NonceConfirmResponse {
  bool Success = 1;
  ErrorCode ErrorCode = 2;
  string ErrorMessage = 3;
}
